fix scroll on mobile and add zoom for main img

--- a/src/assets/templates/organisms/_organisms.scss
+++ b/src/assets/templates/organisms/_organisms.scss
@@ -2125,16 +2125,23 @@ body {
             overflow: hidden;
             div {
               .current-tab-info {
-                display: flex;
+                display: block;
                 align-items: center;
                 padding: 0 0 20px 20px;
                 border-bottom: 1px solid #d4d3d5;
-                img {
-                  width: 100%;
-                  max-width: 200px;
-                  object-fit: contain;
-                  margin-right: 25px;
-                }
+                div {
+                  img {
+                    width: 100%;
+                    max-width: 200px;
+                    object-fit: contain;
+                    margin-right: 25px;
+                  }
+
+                  p {
+                    font-size: 16px;
+                    font-family: 'Montserrat-Light';
+                  }
+                }                
 
                 h2 {
                   font-size: 30px;
@@ -2393,13 +2400,110 @@ ul.nacc li p {
 
 
 
+body {font-family: Arial, Helvetica, sans-serif;}
 
+
+
+
+.imgZoom {
+    max-width: 300px;
+    height: auto;
+    cursor: pointer;
+}
+
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 999999999;
+    padding-top: 200px;
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+}
+
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+/* Add Animation */
+.modal-content, #caption {    
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+@-webkit-keyframes zoom {
+    from {-webkit-transform:scale(0)} 
+    to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+    from {transform:scale(0)} 
+    to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+    color: #bbb;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 992px){
+    .modal-content {
+        width: 100%;
+    }
+}
 
 
 @media all and (max-width: 992px) {
   .forum-tabs-container .naccs .grid .gc .nacc li div .current-tab-info {
     flex-direction: column;
   }
+
+  .forum-tabs-container .naccs .grid .gc .nacc li div .current-tab-info div p {
+    font-size: 16px;
+    font-family: Montserrat-Light;
+    margin-top: 20px;
+    font-size: 12px;
+    margin-bottom: 20px;
+}
 
   #loadMore {
     font-size: 16px;
